feat: Add prompt auditing and security JSON generation
Added quality assurance tools for prompt validation and security
monitoring with structured JSON output.

## New Makefile Targets

### prompt-audit
- Validates CLAUDE.md prompt structure and best practices
- Checks for presence of essential commands:
  - /secure-fix for security issue resolution
  - /explore-plan-code-test for structured development
  - /think-deep for extended reasoning
  - /long-context-map-reduce for large context handling
- Uses tools/prompt_lint.sh for comprehensive validation

### security-json
- Generates structured security scan results
- JSON output with timestamp and multiple check categories:
  - Secret detection via gitleaks (if available)
  - Shell script inventory count
  - Executable permission audit
- Machine-readable format for CI/CD integration

## CI/CD Integration
- Updated GitHub Actions workflow to use new targets
- Structured security reporting for automated monitoring
- Prompt quality gates for consistent agent behavior

## Global Setup Enhancement
- Updated setup_agents_global.sh with latest tooling
- Improved error handling and validation

## Benefits
- Automated prompt quality assurance
- Structured security monitoring
- CI/CD ready validation pipeline
- Consistent command availability checking
- Machine-readable security reports

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,24 @@ jobs:
       - name: Run pre-commit
         run: pre-commit run --all-files --show-diff-on-failure
         
+      - name: Make format and lint
+        run: |
+          make fmt
+          make lint
+
+      - name: Prompt audit
+        run: make prompt-audit
+
+      - name: Security JSON report
+        run: make security-json
+
+      - name: Upload security artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-scan
+          path: security-scan.json
+
       - name: Run audit script
         run: bash tools/audit_setup_scripts.sh
         
@@ -48,4 +66,3 @@ jobs:
             echo "Potential secrets found!"
             exit 1
           fi
-
